Factors out the song animation framework

--- a/cake2.html
+++ b/cake2.html
@@ -5,8 +5,9 @@
 	<title>Cake</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" href="./cake2.css" />
+	<script type="text/javascript" src="./engine.js"></script>
 	<script type="text/javascript" src="./cake2data.js"></script>
-	<script type="text/javascript" src="./cakeengine.js"></script>
+	<script type="text/javascript" src="./cake2run.js"></script>
 </head>
 <body>
 	<div id="background">
