--- a/cake1.html
+++ b/cake1.html
@@ -5,8 +5,9 @@
 	<title>Cake</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" href="./cake1.css" />
+	<script type="text/javascript" src="./engine.js"></script>
 	<script type="text/javascript" src="./cake1data.js"></script>
-	<script type="text/javascript" src="./cakeengine.js"></script>
+	<script type="text/javascript" src="./cake1run.js"></script>
 </head>
 <body>
 	<div id="lyrics">
